bump to Java 21 in core and associated modules, #2798